--- a/index.html
+++ b/index.html
@@ -1,29 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicamos con GitHub</title>
-    <link rel="stylesheet" href="css/index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Principal</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Style+Script&display=swap"
+    rel="stylesheet">
 </head>
-<body>
-    <header>
-        <nav>
-            <h1>Hola a todos</h1>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="pages/about.html">About</a>
-                </li>
-                <li>
-                    <a href="pages/contact.html">contacto</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <h2>Home</h2>
+
+<body class="uno">
+  <header>
+    <h1>
+      Tu cerveceria a un click
+    </h1>
+  </header>
+  <main>
+    <nav class="nav">
+        <ul class="nav-menu nav-menu_visible">
+            <li class="nav-menu-item"><a href="./pages/quines.html" class="nav-menu-link nav-link">Quienes</a></li>
+            <li class="nav-menu-item"><a href="./pages/productos.html" class="nav-menu-link nav-link">Productos</a></li>
+            <li class="nav-menu-item"><a href="./pages/pagina3.html" class="nav-menu-link nav-link">Comentarios</a></li>
+            <li class="nav-menu-item"><a href="./pages/cv.html" class="nav-menu-link nav-link">Contacto</a></li>
+        </ul>
+    <h2 class="menudos">Un motivo para compartir momentos</h2>
+    <div id="carouselExampleControls" class="carousel slide tamaño" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="imagenes/vasos.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="imagenes/vaso11.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="imagenes/vaso10.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="text-center">
+      <div class="lead">
+        Somos un pyme con los mejores Lupulos recolectados directamente de nuestra cosecha.
+      </div>
+    </div>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col order-last">
+          Lupulo Cascade
+        </div>
+        <div class="col">
+          Lupulo Chinook
+        </div>
+        <div class="col order-first">
+          Lupulo Galaxy
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="footer">
+      <strong>
+        <p>Todos los derechos reservados&copy; | Otwel</p>
+      </strong>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
