--- a/pages/cv.html
+++ b/pages/cv.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Emprendimiento de cerveza artesanal con productos consechados por sus propios dueños.">
+    <meta name="keywords" content="CERVEZA ARTESANAL, IPA, KOLSCH">
+    <meta name="robots" content="index"/>
+    <meta name="Sebastian Finocchietti" content="Otwel"/>
+    <meta http-equiv="cache-control" content="no-cache"/>
     <title>Cv</title>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,12 +21,20 @@
         rel="stylesheet">
 </head>
 
-<body class="uno">
-    <header>
+<body>
+    <header class="cabeza">
         <h1>Si queres formar parte de nuestro Equipo</h1>
-        <h2 class="menudos">No lo dudes, envianos tu CV!!</h2>
     </header>
-    <main>
+    <main class="cuerpo">
+        <nav class="nav">
+            <ul class="nav-menu nav-menu_visible">
+                <li class="nav-menu-item"><a href="./../index.html" class="nav-menu-link nav-link">Inico</a></li>
+                <li class="nav-menu-item"><a href="quines.html" class="nav-menu-link nav-link">Quienes</a></li>
+                <li class="nav-menu-item"><a href="productos.html" class="nav-menu-link nav-link">Productos</a></li>
+                <li class="nav-menu-item"><a href="pagina3.html" class="nav-menu-link nav-link">Comentarios</a></li>
+        </ul>
+        </nav>
+        <h2 class="menudos">No lo dudes, envianos tu CV!!</h2>
         <div class="cv">
             <form action="index.js" method="POST">
                 <label for="name">Nombre:</label>
