--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Emprendimiento de cerveza artesanal con productos consechados por sus propios dueños.">
+    <meta name="keywords" content="CERVEZA ARTESANAL, IPA, KOLSCH">
+    <meta name="robots" content="index"/>
+    <meta name="Sebastian Finocchietti" content="Otwel"/>
+    <meta http-equiv="cache-control" content="no-cache"/>
     <title>Productos</title>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,12 +21,21 @@
         rel="stylesheet">
 </head>
 
-<body class="uno">
-    <header>
+<body>
+    <header class="cabeza">
         <h1>
             Tu cervezaria a un click
         </h1>
     </header>
+    <main class="cuerpo">
+        <nav class="nav">
+            <ul class="nav-menu nav-menu_visible">
+                <li class="nav-menu-item"><a href="./../index.html" class="nav-menu-link nav-link">Inico</a></li>
+                <li class="nav-menu-item"><a href="quines.html" class="nav-menu-link nav-link">Quienes</a></li>
+                <li class="nav-menu-item"><a href="pagina3.html" class="nav-menu-link nav-link">Comentarios</a></li>
+                <li class="nav-menu-item"><a href="cv.html" class="nav-menu-link nav-link">Contacto</a></li>
+        </ul>
+        </nav>
     <h2 class="menudos">Cerveza IPA</h2>
     <section class="cervezas">
         <p>De Inglaterra a India hay un largo recorrido. En 1780, Mr. Hodgson descubrió que elevando el lúpulo y la
@@ -47,6 +61,7 @@
             debido al tostado de la cebada además de la malta. Las cervezas normalmente son bajas en alcohol (3,5 % es
             lo típico), aunque se elaboran versiones más potentes para su exportación.</p>
     </section>
+</main>
     <footer>
         <div class="footer">
             <strong>
