--- a/pages/quines.html
+++ b/pages/quines.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Emprendimiento de cerveza artesanal con productos consechados por sus propios dueños.">
+    <meta name="keywords" content="CERVEZA ARTESANAL, IPA, KOLSCH">
+    <meta name="robots" content="index"/>
+    <meta name="Sebastian Finocchietti" content="Otwel"/>
+    <meta http-equiv="cache-control" content="no-cache"/>
     <title>Quienes</title>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,16 +21,20 @@
         rel="stylesheet">
 </head>
 
-<body class="uno">
-    <header>
-        <h1>
-            Tu cervezaria a un click
-        </h1>
+<body>
+    <header class="cabeza">
+        <h1>Tu cervezaria a un click</h1>
     </header>
-    <main>
-        <h2>
-            El lupulo es un camino de ida
-        </h2>
+    <main class="cuerpo">  
+        <nav class="nav">
+            <ul class="nav-menu nav-menu_visible">
+                <li class="nav-menu-item"><a href="./../index.html" class="nav-menu-link nav-link">Inico</a></li>
+                <li class="nav-menu-item"><a href="productos.html" class="nav-menu-link nav-link">Productos</a></li>
+                <li class="nav-menu-item"><a href="pagina3.html" class="nav-menu-link nav-link">Comentarios</a></li>
+                <li class="nav-menu-item"><a href="cv.html" class="nav-menu-link nav-link">Contacto</a></li>
+        </ul>
+        </nav>
+        <h2 class="menudos">El lupulo es un camino de ida</h2>
         <div class="quines2">
             El origen de la idea de crear Cervezas Artezanal surge en torno al año 2015, al descubrir en nuestros viajes
             al extranjero cervezas artesanales, dotadas de aromas y sabores delicados que no encontrábamos en ninguna de
