[ADD] Se agrego inicio.HTML como caratula de la pagina

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -14,27 +14,34 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Style+Script&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </head>
-
 <body>
-    <header class="cabeza">
-        <h1>Si queres formar parte de nuestro Equipo</h1>
-    </header>
-    <main class="cuerpo">
-        <nav class="nav">
-            <ul class="nav-menu nav-menu_visible">
-                <li class="nav-menu-item"><a href="./../index.html" class="nav-menu-link nav-link">Inico</a></li>
-                <li class="nav-menu-item"><a href="quines.html" class="nav-menu-link nav-link">Quienes</a></li>
-                <li class="nav-menu-item"><a href="productos.html" class="nav-menu-link nav-link">Productos</a></li>
-                <li class="nav-menu-item"><a href="pagina3.html" class="nav-menu-link nav-link">Comentarios</a></li>
-        </ul>
-        </nav>
-        <h2 class="menudos">No lo dudes, envianos tu CV!!</h2>
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+        <div class="container-fluid">
+          <a class="navbar-brand">Tu Cerveceria</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="quines.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <main class="fondo">
+        <h1 class="menudos">No lo dudes, envianos tu CV!!</h1>
         <div class="cv">
             <form action="index.js" method="POST">
                 <label for="name">Nombre:</label>
@@ -57,15 +64,25 @@
                 <input type="submit" value="Enviar">
                 <input type="reset" value="Limpiar">
             </form>
+        </div> <br>
+    <q class="rima">No se puede comprar la felicidad, pero si una buena birra</q>
+    
+    <footer style="background-image: url(../imagenes/fondo10.png);">
+        <div class="contenedor">
+            <p>Seguinos y comenta en nuestras redes</p>
         </div>
-    </main>
-    <footer>
-        <div class="footer">
-            <strong>
-                <p>Todos los derechos reservados&copy; | Otwel</p>
-            </strong>
+        <div class="redes-sociales">
+        <button class="icono"><i class="fab fa-twitter"></i></button>
+        <button class="icono"><i class="fab fa-facebook-f"></i></button>
+        <button class="icono"><i class="fab fa-youtube"></i></button>
+        <button class="icono"><i class="fab fa-instagram-square"></i></button>
+        </div>
+        <div class="contenedor">
+          <p class="copy">2021 Sebastian Finocchietti <br> Todos los derechos reservados</p>
         </div>
     </footer>
+    </main>
+    <script src="https://kit.fontawesome.com/3cdda6d263.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
