--- a/pages/quines.html
+++ b/pages/quines.html
@@ -14,59 +14,64 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Style+Script&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>    
 </head>
-
 <body>
-    <header class="cabeza">
-        <h1>Tu cervezaria a un click</h1>
-    </header>
-    <main class="cuerpo">  
-        <nav class="nav">
-            <ul class="nav-menu nav-menu_visible">
-                <li class="nav-menu-item"><a href="./../index.html" class="nav-menu-link nav-link">Inico</a></li>
-                <li class="nav-menu-item"><a href="productos.html" class="nav-menu-link nav-link">Productos</a></li>
-                <li class="nav-menu-item"><a href="pagina3.html" class="nav-menu-link nav-link">Comentarios</a></li>
-                <li class="nav-menu-item"><a href="cv.html" class="nav-menu-link nav-link">Contacto</a></li>
-        </ul>
-        </nav>
-        <h2 class="menudos">El lupulo es un camino de ida</h2>
-        <div class="quines2">
-            El origen de la idea de crear Cervezas Artezanal surge en torno al año 2015, al descubrir en nuestros viajes
-            al extranjero cervezas artesanales, dotadas de aromas y sabores delicados que no encontrábamos en ninguna de
-            las cervezas fabricadas por aquel entonces en Argentina. <br>
-            Puesto que no encontrábamos en nuestro entorno este tipo de cervezas, comenzamos a elaborar pequeñas
-            cantidades de cerveza para nuestro propio disfrute, a partir de maltas hechas por nosotros mismos
-            (germinando y tostando cebada) y lúpulos traídos de otros países. <br>
-            Después de ésto tuvimos la oportunidad de conocer de primera mano el movimiento de las craft beers (cervezas
-            artesanales) y de las microbreweries (Microcervecerías), que en ese país vienen desarrollándose desde los
-            años 70 y que cuenta con una gran implantación y popularidad en la actualidad. Este conocimiento hizo
-            convertirnos en entusiastas de este tipo de cervezas y nos llevó a pensar que en Argentina nos estábamos
-            perdiendo la oportunidad de disfrutar de un producto muy diferente y de mucha más calidad del que estamos
-            habituados, elaborado con materias primas naturales y sin utilizar colorantes ni conservantes artificiales,
-            por lo que a nuestro regreso decidimos diseñar y construir nuestra propia microcervecería, basada en los
-            procesos y técnicas de elaboración de cerveza más innovadores desarrollados en Argentina lanzar nuestra
-            marca. Todo ello fue propiciado por nuestra formación y experiencia laboral, desarrollada tanto en el ámbito
-            de la química natural, como en el de la ingeniería industrial y la eficiencia energética, desempeñada
-            durante casi dos décadas en el mundo de la fermentación y destilación de bebidas alcohólicas y las energías
-            alternativas, además de lo aprendido sobre este tipo de cervezas en el país que está revolucionando el
-            concepto de cerveza. A mediados de 2017, descubrimos gratamente que en los años previos, había comenzado el
-            movimiento de las cervezas artesanales en Argentina, ganando adeptos día a día, hecho que nos animó mucho
-            más a poner en práctica nuestra idea y así contribuir a la expansión de la cultura basada en cervezas de
-            calidad y con personalidad propia.
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+        <div class="container-fluid">
+          <a class="navbar-brand">Tu Cerveceria</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="cv.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+      <main class="fondo">
+        <h1 class="menudos">El lupulo es un camino de ida</h1>
+        <div class="quines2">
+            Somos un grupo de amigos con la idea de formar nuestro propio producto. <br>
+            Una noche todos reuniodos pensamos la idea de poder fabricar nuestra propia cerveza y empezamos a soñar con nuestra marca.
+            Comenzamos a hacer cursos y a investigar sobre como cocinar nuestra propia cerveza. Luego de varios idas y vueltas, decidimos crear nuestro propio producto. <br>
+            Tuvimos que empezar con nuestro trabajo muy artezanal desde cocinar y embotellar todos los productos con el gas justo hasta que pudimos llegar a un producto espectacular. 
+        </div> <br>
+      <q class="rima">Me pidio una prueba de amor, y le dí mi cerveza</q>
+      <div class="grid-container">
+        <div class="grid-item tall" style="background-image: url(../imagenes/vaso2.jpg)"></div>
+        <div class="grid-item" style="background-image: url(../imagenes/vaso3.jpg);"></div>
+        <div class="grid-item wide" style="background-image: url(../imagenes/vaso6.jpg);"></div>
+        <div class="grid-item" style="background-image: url(../imagenes/vaso7.jpg);"></div>
+        <div class="grid-item" style="background-image: url(../imagenes/vaso9.jpg);"></div>
+      </div>
     </main>
-    <footer>
-        <div class="footer">
-            <strong>
-                <p>Todos los derechos reservados&copy; | Otwel</p>
-            </strong>
+    <footer style="background-image: url(../imagenes/fondo10.png);">
+        <div class="contenedor">
+            <p>Seguinos y comenta en nuestras redes</p>
+        </div>
+        <div class="redes-sociales">
+          <button class="icono"><i class="fab fa-twitter"></i></button>
+          <button class="icono"><i class="fab fa-facebook-f"></i></button>
+          <button class="icono"><i class="fab fa-youtube"></i></button>
+          <button class="icono"><i class="fab fa-instagram-square"></i></button>
+        </div>
+        <div class="contenedor">
+          <p class="copy">2021 Sebastian Finocchietti <br> Todos los derechos reservados</p>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/3cdda6d263.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
