--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="Sebastian Finocchietti" content="Otwel"/>
     <meta http-equiv="cache-control" content="no-cache"/>
     <title>Inicio</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <script src="https://kit.fontawesome.com/3cdda6d263.js" crossorigin="anonymous"></script>
 </head>
 <body class="inicio">
     <h1 class="primero">Tu cerveceria</h1>
     <section>
-    <a href="quines.html">
+    <a href="./pages/quines.html">
     <button class="cerv"><i class="fas fa-beer"></i></button>
     </a>
     </section>
