[ADD] se agregaron imagenes en la pagina de productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -42,33 +42,39 @@
       </nav>
     <main class="fondo">
     <h1 class="menudos">IPA</h1>
-    <section class="cervezas">
+    <div class="cervezas1">
+      <img src="../imagenes/pinta2.png" alt="">
         <p>De Inglaterra a India hay un largo recorrido. En 1780, Mr. Hodgson descubrió que elevando el lúpulo y la
             graduación alcohólica, la cerveza llegaba a destino intacta. Bautizó a su fórmula India Pale Ale. En
             Antares, le sumamos lúpulos americanos con presencia de flores y cítricos. Nuestra cerveza viajera.</p>
-    </section>
+        </div>
     <h1 class="menudos">Honey</h1>
-    <section class="cervezas">
+    <div class="cervezas1">
+      <img src="../imagenes/pinta3.png" alt="">
         <p>Babilonia antigua. Tras la boda, el padre de la novia convida al futuro yerno con cerveza de miel a lo largo
             de un mes. Así lo dicta la tradición. Nuestra Honey Beer recoge la historia que dio origen a “la luna de
             miel” y lo celebra con notas mento-ladas y frutales. Y, por supuesto, una inmersión de miel pura para abrir
             los corazones.</p>
-    </section>
+    </div>
     <h1 class="menudos">Kolsch</h1>
-    <section class="cervezas">
+    <div class="cervezas1">
+      <img src="../imagenes/pinta4.png" alt="">
         <p>Existen muchas cervezas doradas y refrescantes. Pero frutadas y con destellos finales de lúpulo, sólo hay un
             estilo: la Kölsch. En Antares rescatamos la antigua receta de la cerveza favorita de los bebedores en
             colonia, Alemania, y la honramos desde 1998. En nuestra cocina, su legado sigue intacto.</p>
-    </section>
+    </div>
     <h1 class="menudos">Red Ale</h1>
-    <section class="cervezas">
+    <div class="cervezas1">
+      <img src="../imagenes/pinta5.png" alt="">
         <p>Conocida también como Irish red ale, es un tipo de cerveza ale original de Irlanda. Su ligero color rojo es
             debido al tostado de la cebada además de la malta. Las cervezas normalmente son bajas en alcohol (3,5 % es
             lo típico), aunque se elaboran versiones más potentes para su exportación.</p>
-    </section>
+        </div>
     <h2>Te llevamos la barra para tu fiesta!</h2>
+    <div class="barra">
     <video controls height="40%", width="40%"> <source src="../imagenes/video1.mp4" type="video/mp4"> </video> 
-    <footer style="background-image: url(../imagenes/fondo10.png);">
+  </div>
+    <footer class="piso" style="background-image: url(../imagenes/fondo10.png);">
         <div class="contenedor">
             <p>Seguinos y comenta en nuestras redes</p>
         </div>
