[UPDATE] se modifico un error de ortografia en la segunda pagina

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -43,14 +43,14 @@
     <main class="fondo">
     <h1 class="menudos">IPA</h1>
     <div class="cervezas1">
-      <img src="../imagenes/pinta2.png" alt="">
+      <img src="../imagenes/pinta2.png" alt="#">
         <p>De Inglaterra a India hay un largo recorrido. En 1780, Mr. Hodgson descubrió que elevando el lúpulo y la
             graduación alcohólica, la cerveza llegaba a destino intacta. Bautizó a su fórmula India Pale Ale. En
             Antares, le sumamos lúpulos americanos con presencia de flores y cítricos. Nuestra cerveza viajera.</p>
         </div>
     <h1 class="menudos">Honey</h1>
     <div class="cervezas1">
-      <img src="../imagenes/pinta3.png" alt="">
+      <img src="../imagenes/pinta3.png" alt="#">
         <p>Babilonia antigua. Tras la boda, el padre de la novia convida al futuro yerno con cerveza de miel a lo largo
             de un mes. Así lo dicta la tradición. Nuestra Honey Beer recoge la historia que dio origen a “la luna de
             miel” y lo celebra con notas mento-ladas y frutales. Y, por supuesto, una inmersión de miel pura para abrir
@@ -58,14 +58,14 @@
     </div>
     <h1 class="menudos">Kolsch</h1>
     <div class="cervezas1">
-      <img src="../imagenes/pinta4.png" alt="">
+      <img src="../imagenes/pinta4.png" alt="#">
         <p>Existen muchas cervezas doradas y refrescantes. Pero frutadas y con destellos finales de lúpulo, sólo hay un
             estilo: la Kölsch. En Antares rescatamos la antigua receta de la cerveza favorita de los bebedores en
             colonia, Alemania, y la honramos desde 1998. En nuestra cocina, su legado sigue intacto.</p>
     </div>
     <h1 class="menudos">Red Ale</h1>
     <div class="cervezas1">
-      <img src="../imagenes/pinta5.png" alt="">
+      <img src="../imagenes/pinta5.png" alt="#">
         <p>Conocida también como Irish red ale, es un tipo de cerveza ale original de Irlanda. Su ligero color rojo es
             debido al tostado de la cebada además de la malta. Las cervezas normalmente son bajas en alcohol (3,5 % es
             lo típico), aunque se elaboran versiones más potentes para su exportación.</p>
