--- a/pages/quines.html
+++ b/pages/quines.html
@@ -44,7 +44,7 @@
         <h1 class="menudos">El lupulo es un camino de ida</h1>
         <div class="quines2">
             Somos un grupo de amigos con la idea de formar nuestro propio producto. <br>
-            Una noche todos reuniodos pensamos la idea de poder fabricar nuestra propia cerveza y empezamos a soñar con nuestra marca.
+            Una noche todos reunidos pensamos la idea de poder fabricar nuestra propia cerveza y empezamos a soñar con nuestra marca.
             Comenzamos a hacer cursos y a investigar sobre como cocinar nuestra propia cerveza. Luego de varios idas y vueltas, decidimos crear nuestro propio producto. <br>
             Tuvimos que empezar con nuestro trabajo muy artezanal desde cocinar y embotellar todos los productos con el gas justo hasta que pudimos llegar a un producto espectacular. 
         </div> <br>
