[UPDATE] se modifico el boton de inicio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 class="primero">Tu cerveceria</h1>
     <section>
     <a href="./pages/quines.html">
-    <button class="cerv"><i class="fas fa-beer"></i></button>
+    <button class="cerv"><img src="./imagenes/lupulo.png" width="60px" alt="#"></button>
     </a>
     </section>
 </body>
