[UPDATE] se modifico la direccion de pagina 404

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 <body class="inicio">
     <h1 class="menudos">404</h1>
     <h2>Cerveza sin alcohol</h2>
-    <a href="./pages/quines.html">Volver a ver cervezas para tu paladar</a>
+    <a href="./index.html">Volver a ver cervezas para tu paladar</a>
     
 </body>
 </html>
